<resources>
    <string name="app_name">MiCalculadora</string>
    <string name="botonCero">0</string>
    <string name="botonUno">1</string>
    <string name="botonDos">2</string>
    <string name="botonTres">3</string>
    <string name="botonCuatro">4</string>
    <string name="botonCinco">5</string>
    <string name="botonSeis">6</string>
    <string name="botonSiete">7</string>
    <string name="botonOcho">8</string>
    <string name="botonNueve">9</string>
    <string name="botonComa">,</string>
    <string name="botonPlus">+</string>
    <string name="botonMul">x</string>
    <string name="botonMinus">-</string>
    <string name="botonClear">Clear</string>
    <string name="botonDiv">/</string>
    <string name="botonIgual">=</string>


</resources>
